--- a/theme/admin/rsrc/css/main.scss
+++ b/theme/admin/rsrc/css/main.scss
@@ -471,17 +471,29 @@ table, td {
 	blockquote {
 		margin: 0;
 		padding: 0.75rem;
+		overflow: hidden;
 		font-family: inherit;
 
 		p {
 			margin-bottom: 0;
 		}
 	}
-}
 
-.item-id {
-	float: right;
-	color: #666;
+	&-id {
+		float: right;
+		color: #666;
+	}
+
+	&-image {
+		float: left;
+		display: block;
+		margin-right: 0.75rem;
+		width: 10rem;
+		height: 7rem;
+		object-fit: cover;
+		background: #EEE;
+		border: 0.05rem solid #AAA;
+	}
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
