--- a/theme/admin/rsrc/css/main.css
+++ b/theme/admin/rsrc/css/main.css
@@ -599,6 +599,9 @@ input, select, textarea {
   border: 0.05rem solid #AAA;
   box-sizing: border-box;
 }
+input:focus, select:focus, textarea:focus {
+  outline: none;
+}
 
 textarea {
   font-family: "Kadwa", "sans-serif";
