Replace the flex layout in favor of a grid layout
This commit replaces the initial CSS flexbox layout for forms of the
admin theme with a more elegant approach called "grid layout". :)

Some interesting information:
https://www.w3schools.com/css/css_grid.asp
https://blog.logrocket.com/flexbox-vs-css-grid/

--- a/theme/admin/rsrc/css/import/_responsive.scss
+++ b/theme/admin/rsrc/css/import/_responsive.scss
@@ -12,19 +12,6 @@
 # Responsive Level #2
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @media only screen and (max-width: 37.5em) {
-	.flex.flex-responsive {
-		display: block;
-		width: auto;
-
-		> .flex-item {
-			width: 100%;
-
-			+ .flex-item {
-				border-top: 0.05rem solid #AAA;
-			}
-		}
-	}
-
 	#main-navi {
 		font-size: 1rem;
 
@@ -43,8 +30,12 @@
 		}
 	}
 
-	.flex-emoticons {
+	#emoticon-list-wrapper {
 		display: none;
+	}
+
+	.form-grid {
+		grid-template-columns: auto auto;
 	}
 
 	.actions {
