Remove ID form field (and rearrange other fields)
This commit removes the ID form field, enlarges the title form field
and rearranges the other form fields in the grid layout.

--- a/theme/admin/rsrc/css/import/_responsive.scss
+++ b/theme/admin/rsrc/css/import/_responsive.scss
@@ -60,6 +60,11 @@
 
 	.form-grid {
 		grid-template-columns: auto auto;
+
+		&-item.first {
+			grid-column-start: 2;
+			grid-column-end: 3;
+		}
 	}
 
 	.actions {
