--- a/theme/admin/rsrc/css/main.scss
+++ b/theme/admin/rsrc/css/main.scss
@@ -145,19 +145,20 @@ body {
 .header-line {
 	padding: 0.5rem 0.75rem;
 	overflow: hidden;
+	background: #EEE;
 
-	&:first-child {
-		background: #5E819F;
-		position: sticky;
-		top: 0;
-	}
+	padding: 0.25rem 0.75rem;
 
-	&:last-child {
-		background: #EEE;
+	+.header-line {
 		border: 0.05rem solid #AAA;
 		border-left: none;
 		border-right: none;
-		padding: 0.25rem 0.75rem;
+	}
+
+	&.background {
+		background: #5E819F;
+		position: sticky;
+		top: 0;
 	}
 }
 
@@ -341,11 +342,18 @@ pre {
 	overflow: auto;
 	-moz-tab-size: 4;
 	tab-size: 4;
+	background: #EEE;
+	padding: 0.5rem;
+	border: 0.05rem solid #AAA;
+	font-style: italic;
 }
 
 code, pre {
 	font-family: "monospace";
-	color: #B03060;
+}
+
+code {
+	color: #008B45;
 }
 
 p {
@@ -375,6 +383,12 @@ img {
 
 .hidden {
 	display: none;
+}
+
+.no-visual-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
 #database-result {
