--- a/theme/admin/rsrc/css/import/_fonts.scss
+++ b/theme/admin/rsrc/css/import/_fonts.scss
@@ -2,9 +2,10 @@
 # Font "Font Awesome" [4.7.0] (by Fontello): SIL Open Font License (OFL)
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @font-face {
-	font-family: "FontAwesome";
+	font-family: "Fontello";
 	font-weight: 400;
-	src: url("../font/font-awesome-fontello.woff2") format("woff2");
+	font-style: normal;
+	src: url("../font/fontello.woff2") format("woff2");
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
