Update Fontello for default theme

--- a/theme/default/rsrc/css/import/_fonts.scss
+++ b/theme/default/rsrc/css/import/_fonts.scss
@@ -1,10 +1,11 @@
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-# Font "Font Awesome" [4.7.0]: SIL Open Font License (OFL)
+# Font "Font Awesome" [4.7.0] (by Fontello): SIL Open Font License (OFL)
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @font-face {
-	font-family: "FontAwesome";
+	font-family: "Fontello";
 	font-weight: 400;
-	src: url("../font/font-awesome.woff2") format("woff2");
+	font-style: normal;
+	src: url("../font/fontello.woff2") format("woff2");
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
