--- a/theme/default/rsrc/css/main.scss
+++ b/theme/default/rsrc/css/main.scss
@@ -408,5 +408,5 @@ thead > tr > td, th > td {
 }
 
 @import "import/responsive";
-@import "import/font-awesome";
+@import "import/fontello";
 @import "import/fonts";
