--- a/theme/default/rsrc/css/main.css
+++ b/theme/default/rsrc/css/main.css
@@ -456,61 +456,176 @@ thead > tr > td, th > td {
   }
 }
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-# FontAwesome Main
+# Fontello
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-.fa {
+.fa:before {
+  font-family: "Fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: never;
   display: inline-block;
-  font: normal normal normal 14px/1 "FontAwesome";
-  font-size: inherit;
+  text-decoration: inherit;
+  text-align: center;
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-# FontAwesome Icons
+# Font Awesome icons
+# ------------------
+# Copyright (C) 2016 by Dave Gandy
+# Author: Dave Gandy
+# License: SIL
+# Homepage: http://fortawesome.github.com/Font-Awesome/
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-.fa-rss:before {
-  content: "";
+.fa-pencil:before {
+  content: "";
 }
 
-.fa-key:before {
-  content: "";
+.fa-comment:before {
+  content: "";
 }
 
-.fa-bars:before {
-  content: "";
+.fa-chat:before {
+  content: "";
 }
 
-.fa-user:before {
-  content: "";
+.fa-users:before {
+  content: "";
+}
+
+.fa-cancel:before {
+  content: "";
+}
+
+.fa-plus:before {
+  content: "";
+}
+
+.fa-list:before {
+  content: "";
+}
+
+.fa-arrow-down:before {
+  content: "";
+}
+
+.fa-arrow-up:before {
+  content: "";
+}
+
+.fa-arrows-cw:before {
+  content: "";
+}
+
+.fa-tag:before {
+  content: "";
+}
+
+.fa-tags:before {
+  content: "";
+}
+
+.fa-star:before {
+  content: "";
+}
+
+.fa-star-empty:before {
+  content: "";
+}
+
+.fa-eye:before {
+  content: "";
+}
+
+.fa-ok:before {
+  content: "";
+}
+
+.fa-info-circled:before {
+  content: "";
 }
 
 .fa-home:before {
-  content: "";
+  content: "";
+}
+
+.fa-attach:before {
+  content: "";
+}
+
+.fa-cog:before {
+  content: "";
+}
+
+.fa-check:before {
+  content: "";
+}
+
+.fa-floppy:before {
+  content: "";
+}
+
+.fa-eye-off:before {
+  content: "";
+}
+
+.fa-folder-open:before {
+  content: "";
+}
+
+.fa-wrench:before {
+  content: "";
 }
 
 .fa-search:before {
   content: "";
 }
 
-.fa-rss-square:before {
-  content: "";
+.fa-envelope-o:before {
+  content: "";
+}
+
+.fa-user:before {
+  content: "";
+}
+
+.fa-trash-o:before {
+  content: "";
+}
+
+.fa-clock-o:before {
+  content: "";
+}
+
+.fa-book:before {
+  content: "";
+}
+
+.fa-bold:before {
+  content: "";
+}
+
+.fa-italic:before {
+  content: "";
+}
+
+.fa-picture-o:before {
+  content: "";
+}
+
+.fa-pencil-square-o:before {
+  content: "";
 }
 
 .fa-arrow-left:before {
   content: "";
-}
-
-.fa-user-secret:before {
-  content: "";
-}
-
-.fa-file-text-o:before {
-  content: "";
-}
-
-.fa-newspaper-o:before {
-  content: "";
 }
 
 .fa-arrow-right:before {
@@ -521,13 +636,206 @@ thead > tr > td, th > td {
   content: "";
 }
 
+.fa-key:before {
+  content: "";
+}
+
+.fa-sign-out:before {
+  content: "";
+}
+
+.fa-external-link:before {
+  content: "";
+}
+
+.fa-sign-in:before {
+  content: "";
+}
+
+.fa-github-square:before {
+  content: "";
+}
+
+.fa-uncheck:before {
+  content: "";
+}
+
+.fa-rss:before {
+  content: "";
+}
+
+.fa-link:before {
+  content: "";
+}
+
+.fa-menu:before {
+  content: "";
+}
+
+.fa-list-ul:before {
+  content: "";
+}
+
+.fa-list-ol:before {
+  content: "";
+}
+
+.fa-dashboard:before {
+  content: "";
+}
+
+.fa-comment-empty:before {
+  content: "";
+}
+
+.fa-chat-empty:before {
+  content: "";
+}
+
+.fa-file-text-o:before {
+  content: "";
+}
+
+.fa-quote-left:before {
+  content: "";
+}
+
+.fa-quote-right:before {
+  content: "";
+}
+
+.fa-smile:before {
+  content: "";
+}
+
+.fa-frown:before {
+  content: "";
+}
+
+.fa-meh:before {
+  content: "";
+}
+
+.fa-keyboard:before {
+  content: "";
+}
+
+.fa-code:before {
+  content: "";
+}
+
+.fa-attention-alt:before {
+  content: "";
+}
+
+.fa-rss-squared:before {
+  content: "";
+}
+
+.fa-sort-name-up:before {
+  content: "";
+}
+
+.fa-sort-name-down:before {
+  content: "";
+}
+
+.fa-sort-up:before {
+  content: "";
+}
+
+.fa-sort-down:before {
+  content: "";
+}
+
+.fa-sort-number-up:before {
+  content: "";
+}
+
+.fa-sort-number-down:before {
+  content: "";
+}
+
+.fa-sun:before {
+  content: "";
+}
+
+.fa-moon:before {
+  content: "";
+}
+
+.fa-box:before {
+  content: "";
+}
+
+.fa-bug:before {
+  content: "";
+}
+
+.fa-plus-squared-alt:before {
+  content: "";
+}
+
+.fa-language:before {
+  content: "";
+}
+
+.fa-database:before {
+  content: "";
+}
+
+.fa-file-archive:before {
+  content: "";
+}
+
+.fa-header:before {
+  content: "";
+}
+
+.fa-newspaper-o:before {
+  content: "";
+}
+
+.fa-at:before {
+  content: "";
+}
+
+.fa-toggle-off:before {
+  content: "";
+}
+
+.fa-toggle-on:before {
+  content: "";
+}
+
+.fa-user-secret:before {
+  content: "";
+}
+
+.fa-server:before {
+  content: "";
+}
+
+.fa-commenting:before {
+  content: "";
+}
+
+.fa-commenting-o:before {
+  content: "";
+}
+
+.fa-user-circle-o:before {
+  content: "";
+}
+
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-# Font "Font Awesome" [4.7.0]: SIL Open Font License (OFL)
+# Font "Font Awesome" [4.7.0] (by Fontello): SIL Open Font License (OFL)
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @font-face {
-  font-family: "FontAwesome";
+  font-family: "Fontello";
   font-weight: 400;
-  src: url("../font/font-awesome.woff2") format("woff2");
+  font-style: normal;
+  src: url("../font/fontello.woff2") format("woff2");
 }
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 # Font "Ruda": SIL Open Font License (OFL)
@@ -542,5 +850,3 @@ thead > tr > td, th > td {
   font-weight: 700;
   src: url("../font/ruda-n-700.woff2") format("woff2");
 }
-
-/*# sourceMappingURL=main.css.map */
