--- a/theme/default/rsrc/css/main.scss
+++ b/theme/default/rsrc/css/main.scss
@@ -303,9 +303,12 @@ a.brackets:before, a.brackets:after {
 	overflow: hidden;
 	margin: 0.5rem 0;
 
+	&-container {
+		clear: both;
+	}
+
 	header {
 		padding: 0.25rem 1rem;
-		border-bottom: 0.05rem solid #AAA;
 		overflow: hidden;
 		text-transform: uppercase;
 
@@ -329,6 +332,7 @@ a.brackets:before, a.brackets:after {
 		margin: 0;
 		padding: 0 1rem;
 		font-family: inherit;
+		border-top: 0.05rem solid #AAA;
 
 		img {
 			display: block;
@@ -348,6 +352,50 @@ a.brackets:before, a.brackets:after {
 	img {
 		display: block;
 	}
+}
+
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Categories
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+#category-heading,
+#category-posts-heading {
+	float: left;
+}
+
+#category-posts-page {
+	float: right;
+	font-size: 0.6rem;
+}
+
+#category-body {
+	clear: both;
+}
+
+.category-list,
+.category-heading-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	font-size: 0.6rem;
+	text-align: center;
+
+	li {
+		display: inline-block;
+
+		+ li:before {
+			content: ' ➜ ';
+		}
+	}
+
+	a {
+		text-decoration: underline;
+	}
+}
+
+.category-heading-list {
+
+	text-align: left;
+	float: right;
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
