Move ID into heading element and remove brackets

--- a/theme/admin/rsrc/css/main.css
+++ b/theme/admin/rsrc/css/main.css
@@ -454,6 +454,8 @@ table, td {
 .item-id {
   float: right;
   color: #666;
+  font-size: 0.7rem;
+  font-weight: normal;
 }
 .item-image {
   float: left;
