--- a/theme/admin/rsrc/css/main.css
+++ b/theme/admin/rsrc/css/main.css
@@ -457,6 +457,14 @@ table, td {
   font-size: 0.7rem;
   font-weight: normal;
 }
+.item-meta {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.item-meta li {
+  display: inline-block;
+}
 .item-image {
   float: left;
   display: block;
