--- a/theme/admin/rsrc/css/main.scss
+++ b/theme/admin/rsrc/css/main.scss
@@ -578,6 +578,10 @@ table, td {
 		grid-template-columns: auto auto;
 	}
 
+	&.no-bottom-border {
+		border-bottom: none;
+	}
+
 	> label {
 		display: flex;
 		align-items: center;
